--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </style>
   </head>
   <body>
-    Hello World
+    <img src="https://nacleenz.github.io/dmst103twineproject/images/Crow.gif">
   </body>
 </html>
