--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
     </style>
   </head>
   <body>
-    <img src="https://nacleenz.github.io/dmst103twineproject/images/Crow.gif">
+    <img src="https://github.com/NaCleenz/DMST103TwineProject/blob/main/images/Crow.gif">
   </body>
 </html>
