--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </style>
   </head>
   <body>
+    hello world
     <img src="https://github.com/NaCleenz/DMST103TwineProject/images/Crow.gif">
   </body>
 </html>
