--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     hello world
-    <img src="https://github.com/NaCleenz/DMST103TwineProject/images/Crow.gif">
+    <img src="https://github.com/NaCleenz/DMST103TwineProject/images/Street.png">
   </body>
 </html>
