--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </style>
   </head>
   <body>
-    hello world
+    Hello World
     <img src="https://github.com/NaCleenz/DMST103TwineProject/images/Street.png">
   </body>
 </html>
