--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     Hello World
-    <img src="https://github.com/NaCleenz/DMST103TwineProject/images/Street.png">
+    <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Street.png">
   </body>
 </html>
