--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
     </style>
   </head>
   <body>
-    hw
-    <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Street.png">
+    <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Crow.gif" style="width:500%">
   </body>
 </html>
