--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     </style>
   </head>
   <body>
-    <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Crow.gif" style="width:100%">
+    <table>
+      <tr>
+        <th>
+          <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Crow.gif" style="width:100%">
+        </th>
+      </tr>
+    </table>
   </body>
 </html>
