--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <table>
       <tr>
         <th>
-          <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Crow.gif" style="width:50%">
+          <img src="https://NaCleenz.github.io/DMST103TwineProject/images/Crow.gif">
         </th>
       </tr>
     </table>
