--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </style>
   </head>
   <body>
-    <a href=”Twine/DMST103Twine.html”>
+    <a href=”https://nacleenz.github.io/DMST103TwineProject/Twine/DMST103Twine.html”>
   </body>
   <table>
       <tr>
