--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </style>
   </head>
   <body>
-      <a href=”https://nacleenz.github.io/DMST103TwineProject/DMST103Twine.html”>twine link
+      <a href=DMST103Twine.html>twine link
       </a>
   </body>
 </html>
