--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     </style>
   </head>
   <body>
-    I chose to make a fictional story with heavy symbolism in which you traverse the concepts of the invasiveness and corruptness of modern society. There is some humour sprinkled in throughout as well because my goal is not to show that our future is bleak, rather that even when there are frustrating obstacles in our way, we have the ability to overcome them.
+    I chose to make a fictional story with heavy symbolism in which you traverse the concepts of the invasiveness and corruptness of modern society.<br>
+    There is some humour sprinkled in throughout as well because my goal is not to show that our future is bleak, rather that even when there are frustrating obstacles in our way, we have the ability to overcome them.<br>
     <a href=DMST103Twine.html>Start Adventure</a>
   </body>
 </html>
